# Build tables for the tests
SET(CMAKE_CXX_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${CMAKE_CURRENT_BINARY_DIR}")
SET(CMAKE_C_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${CMAKE_CURRENT_BINARY_DIR}")
add_library(ut_sc_rts001 STATIC sc_rts001.c)
add_library(ut_sc_rts002 STATIC sc_rts002.c)
add_library(ut_sc_rts003 STATIC sc_rts003.c)
add_library(ut_sc_rts004 STATIC sc_rts004.c)
add_library(ut_sc_rts005 STATIC sc_rts005.c)
add_library(ut_sc_rts006 STATIC sc_rts006.c)
add_library(ut_sc_rts007 STATIC sc_rts007.c)
add_library(ut_sc_rts008 STATIC sc_rts008.c)
add_library(ut_sc_rts063 STATIC sc_rts063.c)
add_library(ut_sc_rts064 STATIC sc_rts064.c)

set_target_properties(ut_sc_rts001 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts002 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts003 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts004 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts005 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts006 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts007 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts008 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts063 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_sc_rts064 PROPERTIES PREFIX "" SUFFIX ".tbl")
